--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
   "name": "canvas-wrapper",
+  "description": "Split canvas text into lines on specified rule with optional alignment, padding, and more. Supports HDPI screens.",
+  "version": "1.0.0",
+  "license": "MIT",
+  "main": "canvas-text-wrapper.js",
+  "keywords": [
+    "canvas",
+    "canvas-text",
+    "text",
+    "split",
+    "wrap",
+    "hdpi-canvas",
+    "text-split"
+  ],
+  "homepage": "https://github.com/Neesh774/canvas-wrapper.git",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Neesh774/canvas-wrapper"
+    "url": "https://github.com/Neesh774/canvas-wrapper.git"
   },
-  "version": "1.0.1",
-  "description": "Wraps text using the node-canvas library in multiple lines with constraints",
-  "main": "index.js",
+  "author": "Kanishq Kancharla (https://github.com/Neesh774)",
+  "bugs": {
+    "url": "https://github.com/Neesh774/canvas-wrapper.git"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "beefy test/test.js --live --open"
   },
-  "author": "Neesh774",
-  "license": "ISC"
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-uglify": "^0.9.1",
+    "uglify-save-license": "^0.4.1"
+  }
 }
